--- a/index.html
+++ b/index.html
@@ -1,39 +1,49 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MH fullstack developing</title>
+
+    <title>My resume</title> 
 </head>
+
 <body>
-    <h1>Mh Full Stack Developing</h1>
+    <h1>MyResume</h1>
+    <img src="./IMG_9919.jpg" height="200">
     <hr>
     <hr>
-    <h2>My portfolio</h2>
+    <h2>Summary</h2>
+    <p>I am a 47-year-old professional from the UK with a diverse background and a passion for lifelong learning. Having spent 20 years as a tradesman, I developed strong problem-solving skills, attention to detail, and a hands-on approach to work. I am a very highly trained yoga teacher and practitioner of meditation. I have now transitioned into finance, I now trade futures while also working as a full stack developer. My focus is on taking on one project at a time, ensuring I provide tailored, high-quality service by working closely with clients without rushing. A former athlete with a deep love for sports, I am also an avid traveller, having visited over 40 countries, which has broadened my perspective and enhanced my adaptability in both personal and professional pursuits.</p>
+<h2>Education</h2>
+<ul>
+    <li>Harnham Junior School 1983-1988</li>
+    <li>Bishop wordsworth Grammer School 1988-1994 <ul>
+        <Li>Qualifications
+            <li>9 GCSE's </li></ul>
+        </ul>
+        
+    </ul></li>
+    <li>200 hour Yin yoga TTC Bali 2017 </li>
+    <li>50 hour Yin Yoga TTC New York 2019</li>
+    <li> 50 hour Yin Yoga TTC Bangkok 2019</li>
+    <li> 500 yoga alliance TTC with Sarah Powers</li>
+    <li>Axia Futures Blue Print 2020-2022 Poland</li>
+    <li>Full Stack Developer Bootcamp</li></ul>
+
+    <h2>Work Experience</h2>
+    <ul>
+        <li>HQ Land Command Wilton ( Ministry of Defence) 1994-1998</li>
+        <li>Self Employed Tradesmen 1998-2019</li>
+        <li>Self employed yoga teacher 2014-2019</li>
+        <li>Yoga and meditation teacher Hope Rehab Thailand 2019-2020</li>
+        <li>Yoga Tecaher AHMS Hotels Phuekt 2020</li>
+        <li>Futures Trader Axia futures Poland 2020-2022</li>
+        <li>Self Empoyed FullStack Developer 2022-2024</li>
+
+    </ul>
+<h2>Skills</h2>
+
     
-<h3><a href="./public/birthday-invite.html">Birthday invite</a></h3>
-
-<Img src="./assets/images/Screenshot 2024-09-08 at 15.51.11.png" height="200"/>
-
-<h3><a href="./public/movie-ranking.html">Movie Ranking</a></h3>
-<img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
-<hr>
-<h3><a href="./resume/resume.html">Click here for my resume</a></h3>
-<hr>
-<a href="./public/contact.html">contact me</a> <a href="./public/about.html">About me</a>
 </body>
+<footer>Martin Heather all rights reserved 2024</footer>
+
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
